// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiImage is rendered 1`] = `
<figure
  aria-label="aria-label"
  class="euiImage euiImage--large testClass1 testClass2"
  data-test-subj="test subject string"
>
  <img
    alt="alt"
    class="euiImage__img"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered and allows full screen 1`] = `
<button
  class="euiImage euiImage--large euiImage--allowFullScreen testClass1 testClass2"
  type="button"
>
  <figure
    aria-label="aria-label"
    data-test-subj="test subject string"
  >
    <img
      alt="alt"
      class="euiImage__img"
      src="/cat.jpg"
    />
    <svg
      class="euiIcon euiIcon--medium euiIcon--ghost euiIcon-isLoading euiImage__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </figure>
</button>
`;
